# symularairag

./: .dockerignore  .gitignore  Dockerfile  README.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
src/: api.py  config.py  graph.py  ingest.py  nodes.py  retriever.py  state.py  tools.py
static/: index.html
vectorstore/: chroma.sqlite3
